@@ -14,7 +14,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.alluxio</groupId>
   <artifactId>alluxio-parent</artifactId>
-  <version>2.10.0-SNAPSHOT</version>
+  <version>295-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Alluxio Parent</name>
   <description>Parent POM of Alluxio project: a Memory-Speed Virtual Distributed Storage System</description>
@@ -122,25 +122,26 @@
   </repositories>
 
   <properties>
-    <argLine></argLine>
+    <argLine />
     <apache.curator.version>4.2.0</apache.curator.version>
     <aws.amazonaws.version>1.11.815</aws.amazonaws.version>
     <build.path>build</build.path>
     <catalyst.version>1.2.1</catalyst.version>
     <glusterfs-hadoop.version>2.3.13</glusterfs-hadoop.version>
-    <grpc.version>1.37.0</grpc.version>
+    <grpc.version>1.54.1</grpc.version>
     <gson.version>2.8.9</gson.version>
-    <netty.version>4.1.52.Final</netty.version>
+    <netty.version>4.1.87.Final</netty.version>
     <rocksdb.version>7.0.3</rocksdb.version>
     <hadoop.version>3.3.1</hadoop.version>
     <jacoco.version>0.8.5</jacoco.version>
-    <java.version>1.8</java.version>
+    <java.version>11</java.version>
     <jaxb.version>2.3.3</jaxb.version>
     <jersey.version>2.34</jersey.version>
     <jetty.version>9.4.46.v20220331</jetty.version>
     <junit.version>4.13.1</junit.version>
+    <jupiter.version>5.9.2</jupiter.version>
     <log4j.version>2.17.1</log4j.version>
-    <maven.version>3.3.9</maven.version>
+    <maven.version>3.8.6</maven.version>
     <metrics.version>4.1.11</metrics.version>
     <mockito.version>3.4.4</mockito.version>
     <orc.version>1.6.3</orc.version>
@@ -176,17 +177,8 @@
 
   <modules>
     <module>assembly</module>
-    <module>core</module>
-    <module>examples</module>
-    <module>integration</module>
-    <module>microbench</module>
-    <module>minicluster</module>
-    <module>job</module>
-    <module>shaded</module>
-    <module>shell</module>
-    <module>stress</module>
-    <module>tests</module>
-    <module>underfs</module>
+    <module>common</module>
+    <module>dora</module>
     <module>webui</module>
   </modules>
 
@@ -293,11 +285,6 @@
         <groupId>com.jamesmurty.utils</groupId>
         <artifactId>java-xmlbuilder</artifactId>
         <version>1.3</version>
-      </dependency>
-      <dependency>
-        <groupId>com.salesforce.servicelibs</groupId>
-        <artifactId>proto-backwards-compatibility</artifactId>
-        <version>1.0.7</version>
       </dependency>
       <dependency>
         <groupId>com.sun.xml.bind</groupId>
@@ -427,6 +414,11 @@
         <version>2.1.6</version>
       </dependency>
       <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
+      </dependency>
+      <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>3.1.0</version>
@@ -541,11 +533,6 @@
             <artifactId>jasper-compiler</artifactId>
           </exclusion>
         </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-yarn-client</artifactId>
-        <version>${hadoop.version}</version>
       </dependency>
       <dependency>
         <groupId>com.qcloud.cos</groupId>
@@ -936,6 +923,10 @@
             <maxmem>1024m</maxmem>
             <compilerArgs>
               <arg>-Xlint:none</arg>
+              <arg>--add-exports=java.base/jdk.internal.access=ALL-UNNAMED</arg>
+              <arg>--add-exports=java.base/jdk.internal=ALL-UNNAMED</arg>
+              <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+              <arg>--add-exports=java.management/sun.management=ALL-UNNAMED</arg>
             </compilerArgs>
           </configuration>
         </plugin>
@@ -995,7 +986,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
           <configuration>
-            <argLine>@{argLine} -Djava.net.preferIPv4Stack=true</argLine>
+            <argLine>@{argLine} -Djava.net.preferIPv4Stack=true --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
             <excludesFile>${build.path}/surefire/${surefire.excludesFile}</excludesFile>
             <forkCount>${surefire.forkCount}</forkCount>
             <rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</rerunFailingTestsCount>
@@ -1198,7 +1189,7 @@
             <sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
           </sourceDirectories>
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
-          <excludes>**/org/apache/jsp/**,**/alluxio/concurrent/jsr/**,**/alluxio/jnifuse/**</excludes>
+          <excludes>**/org/apache/jsp/**,**/alluxio/jnifuse/**</excludes>
           <encoding>UTF-8</encoding>
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
@@ -1226,7 +1217,6 @@
           <excludes>
 
             <!-- Code Exclusions -->
-            <exclude>**/src/main/java/alluxio/concurrent/jsr/**</exclude>
             <exclude>**/src/main/resources/*</exclude>
             <exclude>**/src/proto/**</exclude>
             <exclude>**/src/deb/**/*</exclude>
@@ -1362,44 +1352,6 @@
       <properties>
         <hadoop.version>3.3.1</hadoop.version>
       </properties>
-    </profile>
-
-    <!-- Requires hadoop.version to be 2.4.0 or later -->
-    <profile>
-      <id>java11</id>
-      <activation>
-        <jdk>11</jdk>
-      </activation>
-      <properties>
-        <java.version>1.8</java.version>
-      </properties>
-      <dependencyManagement>
-        <dependencies>
-          <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
-          </dependency>
-        </dependencies>
-      </dependencyManagement>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <configuration>
-              <source>8</source>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
 
     <!-- profile that Alluxio developers should use -->
